test/expected/explain_enc.out
explain enum class C x
        ^
9: error: "enum class": enum classes must just use "enum"
